--- a/src/main/resources/templates/Redes.html
+++ b/src/main/resources/templates/Redes.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Seguinos</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    </head>
-    <body>
-        <div th:replace="layout/plantilla :: header"></div>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="layout/plantilla :: head"></head>
+<body>
+<header th:replace="layout/plantilla :: header"></header>
 
+<div class="container mt-5 text-center">
+    <h2 class="mb-4" th:text="#{redes.titulo}">Síguenos en nuestras redes sociales</h2>
 
-        <header class="bg-color: #40E0D0  text-center p-3">
-            <h1>¿Ya nos sigues en nuestras redes?</h1>
-        </header>
-
-        <div class="container text-center mt-5">
-            <div class="row justify-content-center">
-                <div class="col-md-3">
-                    <img src="imagenes/instagram.jpg" alt="" style="width: 100%"/>
-                    <p>GuarderiaFeliz_CR</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="imagenes/facebook.jpg" alt="" style="width: 100%"/>
-                    <p>Guarderia Feliz</p>
-                </div>
-            </div>
+    <div class="row justify-content-center">
+        <div class="col-md-4 mb-4">
+            <a href="https://www.facebook.com/" target="_blank">
+                <img th:src="@{/imagenes/facebook.jpg}" alt="Facebook" class="img-fluid rounded shadow"
+                     style="max-width: 300px;">
+                <p class="mt-2" th:text="#{redes.facebook}">Facebook</p>
+            </a>
         </div>
 
-        <footer th:replace="layout/plantilla :: footer"></footer>
+        <div class="col-md-4 mb-4">
+            <a href="https://www.instagram.com/" target="_blank">
+                <img th:src="@{/imagenes/instagram.jpg}" alt="Instagram" class="img-fluid rounded shadow"
+                     style="max-width: 300px;">
+                <p class="mt-2" th:text="#{redes.instagram}">Instagram</p>
+            </a>
+        </div>
+    </div>
+</div>
 
-    </body>
+<footer th:replace="layout/plantilla :: footer"></footer>
+</body>
 </html>
