--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-    <head th:fragment="head">
-        <title>Guardería Feliz</title>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    </head>
-    <body>
-        <header th:fragment="header" class="header">
-            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
-                <div class="container">
-                    <a th:href="@{/}" class="navbar-brand">Guardería</a>
-                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/inicioseccion}">Iniciar Sesión</a></li>
-
-                            <!-- Menú desplegable para "Servicios" -->
-                            <li class="nav-item dropdown px-2">
-                                <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Admisión
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                                    <li><a class="dropdown-item" th:href="@{/Matricula}">Matrícula</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/Financiamiento}">Planes de Financiamiento</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/horario}">Horarios</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/Requisitos}">Requisitos</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Nosotros}">Conócenos</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/areaPsicologica}">Área Psicológica</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Cursos}">Cursos</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/menu}">Comidas</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/metodoDePago}">Método de Pago</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/ubicacion}">Ubicación</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto}">Contacto</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Redes}">Redes</a></li>
-                            
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head">
+    <title th:text="#{aplicacion.titulo}">Guardería Feliz</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+</head>
+<body>
+<header th:fragment="header" class="header">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+        <div class="container">
+            <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/inicioseccion}">[[#{menu.iniciarSesion}]]</a></li>
+                    <li class="nav-item dropdown px-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            [[#{menu.admision}]]
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                            <li><a class="dropdown-item" th:href="@{/Matricula}">[[#{menu.matricula}]]</a></li>
+                            <li><a class="dropdown-item" th:href="@{/Financiamiento}">[[#{menu.financiamiento}]]</a></li>
+                            <li><a class="dropdown-item" th:href="@{/horario}">[[#{menu.horarios}]]</a></li>
+                            <li><a class="dropdown-item" th:href="@{/Requisitos}">[[#{menu.requisitos}]]</a></li>
                         </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-
-        <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
-            <div class="container">
-                <div class="col">
-                    <p class="lead text-center">Since 2010</p>
-                </div>   
+                    </li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/Nosotros}">[[#{menu.nosotros}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/areaPsicologica}">[[#{menu.areaPsicologica}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/Cursos}">[[#{menu.cursos}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/menu}">[[#{menu.comidas}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/metodoDePago}">[[#{menu.pago}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/ubicacion}">[[#{menu.ubicacion}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto}">[[#{menu.contacto}]]</a></li>
+                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/Redes}">[[#{menu.redes}]]</a></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Lang</a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
+                            <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-        </footer>
-    </body>
+        </div>
+    </nav>
+</header>
+
+<footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
+    <div class="container">
+        <p class="lead text-center">[[#{plantilla.derechos}]]</p>
+    </div>   
+</footer>
+</body>
 </html>
