--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -13,15 +13,15 @@
         <div class="col-md-8">
             <h4 class="fw-bold" th:text="#{menu.merienda1.titulo}">1ra Merienda</h4>
             <p th:text="#{menu.merienda1.horario}">La primera merienda del día se dará en un horario de 10:00 am hasta las 10:30am</p>
-            <p th:text="#{menu.merienda1.descripcion}">Cuenta con 1 yogurt + 1 fruta + 1 galleta. (*Varía según el día)</p>
+            <p th:text="#{menu.merienda1.descripcion}">Cuenta con 1 yogurt + 1 fruta* + 1 galleta. (*Varía según el día)</p>
 
             <h4 class="fw-bold mt-4" th:text="#{menu.almuerzo.titulo}">Almuerzo</h4>
             <p th:text="#{menu.almuerzo.horario}">El almuerzo será dado en un horario de 12:30pm hasta la 1:30pm</p>
-            <p th:text="#{menu.almuerzo.descripcion}">Arroz + una proteína + vegetales + bebida. (*Varían según el día)</p>
+            <p th:text="#{menu.almuerzo.descripcion}">Arroz + una proteína* + vegetales + bebida. (*Varían según el día)</p>
 
             <h4 class="fw-bold mt-4" th:text="#{menu.merienda2.titulo}">2da Merienda</h4>
             <p th:text="#{menu.merienda2.horario}">La segunda merienda del día se dará en un horario de 4:00pm</p>
-            <p th:text="#{menu.merienda2.descripcion}">Incluye un batido natural + galletas. (*Sujeto a disponibilidad)</p>
+            <p th:text="#{menu.merienda2.descripcion}">Incluye un batido natural + galletas*. (*Sujeto a disponibilidad)</p>
         </div>
 
         <div class="col-md-4 text-center">
