--- a/src/main/resources/templates/Matricula.html
+++ b/src/main/resources/templates/Matricula.html
@@ -9,10 +9,10 @@
             <div class="col-md-6">
                 <div class="card p-4 shadow">
                     <h2 class="text-center mb-4" th:text="#{matricula.titulo}">Matrícula en Línea</h2>
-                    <form>
+                    <form th:action="@{/Matricula}" method="post">
                         <div class="mb-3">
                             <label for="nombre" class="form-label" th:text="#{matricula.nombre}">Nombre Completo</label>
-                            <input type="text" class="form-control" id="nombre" name="nombre" />
+                            <input type="text" class="form-control" id="nombreCompleto" name="nombreCompleto" />
                         </div>
 
                         <div class="mb-3">
